Many fixes - Known issue: Draggable  sometime restrict to a too small area preventing to move widgets in the latest 1-2 columns

--- a/app/scripts/dashboard/_dashboard.scss
+++ b/app/scripts/dashboard/_dashboard.scss
@@ -10,6 +10,15 @@ gridster,
             list-style: none;
             overflow: hidden;
 
+            .ui-resizable-handle {
+                &.ui-resizable-e {
+                    right: -2px;
+                }
+                &.ui-resizable-s {
+                    bottom: -2px;
+                }
+            }
+
             &[widget] {
                 background: gray;
                 cursor: pointer;
